# Learn_HowToEigen

./: .gitignore  CMakeLists.txt  README.md  eigen_test_case.cmake  main_calc_matrix.cpp  main_calc_vector.cpp  main_matrix_decomposition.cpp  main_matrix_features.cpp  test_template.cpp  test_utils.hpp
BasicOperation/: CMakeLists.txt  calc_order.cpp  copy_to_std_container.cpp  diag_matrix.cpp  inverse_matrix.cpp  matrix.cpp  matrix_initialize.cpp  ndim_type.cpp  packed_eigen_class.cpp  vector.cpp  vector_initialize.cpp
Geometry/: CMakeLists.txt  geometry_3d_transformer.cpp  geometry_cross.cpp  geometry_eular_angle.cpp
LinAlg/: CMakeLists.txt  eigen_problem.cpp  general_eigen_problem.cpp  general_inverse_matrix.cpp  inverse_matrix.cpp  linalg_least_square.cpp  linalg_relative_error.cpp  linalg_solver.cpp
LinAlg/Decomp/: cholesky_decomp.cpp  lu_decomp.cpp  qr_decomp.cpp  svd_decomp.cpp
Mapping/: CMakeLists.txt  map_matrix.cpp  map_vector.cpp
eigen/3.3.4/: INSTALL_RECEIPT.json
